enhance code quality